--- a/client/src/layouts/login.css
+++ b/client/src/layouts/login.css
@@ -10,10 +10,9 @@
     width: 600px;
     height: 600px;
     padding: 10px;
-    border: 2px solid green;
+    border: 2px solid black;
     border-radius: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
 }
