10/27/2022 designing and changing SASS bootstrap to style page

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -15,7 +15,7 @@
   */
   html, body {
     height: 100%;
-    background-color: #faf0ca;
+    background-color: #faf0ca !important;
     color: #0d3b66;
   }
   /*
