10/31/2022 desinging buttons and layouts

--- a/client/src/styles/scss/app.scss
+++ b/client/src/styles/scss/app.scss
@@ -1,14 +1,31 @@
 @use "../../../node_modules/bootstrap/scss/bootstrap.scss";
+@use "./buttons";
+@use "./footer";
+@use "./form-style";
+@use "./notFound";
 
 body{
     background-image: linear-gradient(to top, #faf0ca, #f9e9b0, #f7e295, #f6db7a, #f4d35e);
     color: #0d3b66;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-.btn-primary {
+/* .btn-primary {
     background-image: linear-gradient(to right top, #ee964b, #f18942, #f47a3c, #f76a39, #f95738);
-}
+} */
 
 .primary {
     color: #0d3b66;
 }
+
+/* .footer-banner {
+    margin-top: 20px;
+    height: 100px;
+    width: 100vw;
+    border-top: 1px solid black;
+}
+
+.footer-banner li {
+    margin-left: 20px;
+} */
