--- a/client/src/styles/css/app.css
+++ b/client/src/styles/css/app.css
@@ -11091,7 +11091,7 @@ textarea.form-control-lg {
   display: inline-block;
   line-height: 0.7;
   position: relative;
-  color: #FFB485;
+  color: #f95738;
 }
 
 .error-container > span > span {
@@ -11102,7 +11102,7 @@ textarea.form-control-lg {
 .error-container > span:nth-of-type(1) {
   perspective: 1000px;
   perspective-origin: 500% 50%;
-  color: #F0E395;
+  color: #0d3b66;
 }
 
 .error-container > span:nth-of-type(1) > span {
