--- a/client/src/styles/scss/_notFound.scss
+++ b/client/src/styles/scss/_notFound.scss
@@ -11,7 +11,7 @@
   display: inline-block;
   line-height: 0.7;
   position: relative;
-  color: #FFB485;
+  color: #f95738;
 }
 .error-container > span > span {
   display: inline-block;
@@ -20,7 +20,7 @@
 .error-container > span:nth-of-type(1) {
   perspective: 1000px;
   perspective-origin: 500% 50%;
-  color: #F0E395;
+  color: #0d3b66;
 }
 .error-container > span:nth-of-type(1) > span {
   transform-origin: 50% 100% 0px;
