11/13/2022 designing breakpoints and layouts

--- a/client/src/styles/css/app.css
+++ b/client/src/styles/css/app.css
@@ -11041,7 +11041,6 @@ textarea.form-control-lg {
 
 .page-container {
   position: relative;
-  min-height: 100vh;
 }
 
 .content-wrap {
@@ -11271,6 +11270,11 @@ a.more-link {
   letter-spacing: 1px;
 }
 
+.dynamic-card {
+  width: 18rem;
+  margin: 6px;
+}
+
 body {
   background-image: linear-gradient(to top, #faf0ca, #f9e9b0, #f7e295, #f6db7a, #f4d35e);
   color: #0d3b66;
@@ -11278,20 +11282,6 @@ body {
   overflow-x: hidden;
 }
 
-/* .btn-primary {
-    background-image: linear-gradient(to right top, #ee964b, #f18942, #f47a3c, #f76a39, #f95738);
-} */
 .primary {
   color: #0d3b66;
-}
-
-/* .footer-banner {
-    margin-top: 20px;
-    height: 100px;
-    width: 100vw;
-    border-top: 1px solid black;
-}
-
-.footer-banner li {
-    margin-left: 20px;
-} *//*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=app.css.map */
