--- a/client/src/styles/scss/app.scss
+++ b/client/src/styles/scss/app.scss
@@ -2,7 +2,8 @@
 @use "./buttons";
 @use "./footer";
 @use "./form-style";
-@use "./notFound";
+@use "./not-found";
+@use "./dynamic-card";
 
 body{
     background-image: linear-gradient(to top, #faf0ca, #f9e9b0, #f7e295, #f6db7a, #f4d35e);
