--- a/client/src/styles/scss/_form-style.scss
+++ b/client/src/styles/scss/_form-style.scss
@@ -1,18 +1,22 @@
 .mainSection {
-    height: 700px;
+    height: auto;
     width: 100vw;
     display: flex;
+    margin-bottom: 5px;
     align-items: center;
     justify-content: center;
 }
 
 .mainSection .login {
-    width: 600px;
-    height: 600px;
+    width: 30rem;
+    height: 25rem;
     padding: 10px;
-    border: 2px solid black;
+    border: 2px solid #0d3b66;
     border-radius: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    @media(max-width: 989px){
+        border: none;
+    }
 }
