--- a/client/src/styles/scss/app.scss
+++ b/client/src/styles/scss/app.scss
@@ -5,22 +5,8 @@
 @use "./not-found";
 @use "./dynamic-card";
 
-@include media-breakpoint-up (md){
-    .dynamic-card {
-        width: 21rem
-    }
-    
-}
-
-@include media-breakpoint-up (sm){
-    .dynamic-card {
-        width: 26rem
-    }
-    
-}
-
 body{
-    background-image: linear-gradient(to top, #faf0ca, #f9e9b0, #f7e295, #f6db7a, #f4d35e);
+    background-color: #f9e9b0;
     color: #0d3b66;
     max-width: 100%;
     overflow-x: hidden;
@@ -29,3 +15,5 @@ body{
 .primary {
     color: #0d3b66;
 }
+
+/* linear-gradient(to top, #faf0ca, #f9e9b0, #f7e295, #f6db7a, #f4d35e); */
