--- a/client/src/styles/css/app.css
+++ b/client/src/styles/css/app.css
@@ -11085,4 +11085,8 @@ body {
   color: #0d3b66;
 }
 
+.card-body {
+  background-color: #faf0ca;
+}
+
 /* linear-gradient(to top, #faf0ca, #f9e9b0, #f7e295, #f6db7a, #f4d35e); *//*# sourceMappingURL=app.css.map */
